[gd_scene load_steps=11 format=2]

[ext_resource path="res://game_objects/primitive/Node2D_Container.gd" type="Script" id=1]
[ext_resource path="res://game_objects/actors/objects/Environment/Grass/Grass.gd" type="Script" id=2]
[ext_resource path="res://game_objects/primitive/Z_Axis.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/foliage/grass_cut.png" type="Texture" id=4]
[ext_resource path="res://shaders/simple_wind_shader/shaders/wind_2d.shader" type="Shader" id=5]
[ext_resource path="res://assets/foliage/foliage.png" type="Texture" id=6]
[ext_resource path="res://game_objects/properties/Draw_Priority_Setting_Stationary.tscn" type="PackedScene" id=7]
[ext_resource path="res://game_objects/primitive/Hurtbox.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/speed = 3.0
shader_param/minStrength = 0.01
shader_param/maxStrength = 0.07
shader_param/strengthScale = 100.0
shader_param/interval = 12.0
shader_param/detail = 2.0
shader_param/distortion = 0.05
shader_param/heightOffset = 0.0
shader_param/time_offset = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.6221, 21.8314 )

[node name="Grass" type="Node2D"]
script = ExtResource( 1 )

[node name="Body" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Draw_Priority_Point" type="Position2D" parent="Body"]
position = Vector2( 0, 23.019 )

[node name="Z_Axis" parent="Body" instance=ExtResource( 3 )]

[node name="Under" type="Sprite" parent="Body/Z_Axis"]
visible = false
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Body/Z_Axis"]
material = SubResource( 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Timer" type="Timer" parent="Body"]
process_mode = 0
wait_time = 0.1
one_shot = true
autostart = true

[node name="Draw_Priority_Setting_Stationary" parent="Body" instance=ExtResource( 7 )]

[node name="Hurtbox" parent="Body" instance=ExtResource( 8 )]

[node name="Area_Shape" parent="Body/Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Z_Height" parent="Body/Hurtbox/Z_Axis" index="0"]
position = Vector2( 0, -40.9972 )

[connection signal="timeout" from="Body/Timer" to="Body" method="_on_Timer_timeout"]

[editable path="Body/Hurtbox"]

[editable path="Body/Hurtbox/Z_Axis"]
